# try-cogapp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/try_cogapp/: __main__.py  argparser.py  main.py
