[project]
name = "try-cogapp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jia-Shen Boon", email = "jiashen@gmail.com"},
]
dependencies = [
    "cogapp>=3.4.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
cog = "python -m cogapp -r README.md"
